# novatel_gps_driver

./: .gitignore
novatel_gps_driver/: CMakeLists.txt  package.xml
novatel_gps_driver/scripts/: novatel_odom_publisher.py
novatel_gps_driver/src/: novatel_gps.cpp
novatel_gps_driver/src/nodelets/: novatel_gps_nodelet.cpp
novatel_gps_driver/yaml/: rosparam.yaml
novatel_gps_msgs/: CMakeLists.txt
